@@ -11,6 +11,8 @@ class SocolissimoRedirectmobileModuleFrontController extends ModuleFrontControll
 {
 
 	public $ssl = true;
+	public $display_header = false;
+	public $display_footer = false;
 
 	/**
 	 * @see FrontController::initContent()
@@ -45,10 +47,17 @@ class SocolissimoRedirectmobileModuleFrontController extends ModuleFrontControll
 		/* Add signature to get the gift and gift message in the trParamPlus */
 		$inputs['signature'] = $so->generateKey($inputs);
 
-		$socolissimo_url = Configuration::get('SOCOLISSIMO_URL_MOBILE');
+		// automatic settings api protocol for ssl
+		$protocol = 'http://';
+		if (Configuration::get('PS_SSL_ENABLED'))
+			$protocol = 'https://';
+		$socolissimo_url = $protocol.Configuration::get('SOCOLISSIMO_URL_MOBILE');
+
 		Context::getContext()->smarty->assign(array(
 			'inputs' => $inputs,
-			'socolissimo_url' => $socolissimo_url
+			'socolissimo_url' => $socolissimo_url,
+			'logo' => Tools::getHttpHost(true).__PS_BASE_URI__.'modules/socolissimo/logo.gif',
+			'loader' => Tools::getHttpHost(true).__PS_BASE_URI__.'modules/socolissimo/img/ajax-loader.gif',
 		));
 
 		$this->setTemplate('redirect.tpl');
