@@ -55,11 +55,16 @@ $inputs['trParamPlus'] = implode('|', $param_plus);
 /* Add signature to get the gift and gift message in the trParamPlus */
 $inputs['signature'] = $so->generateKey($inputs);
 
-$socolissimo_url = Configuration::get('SOCOLISSIMO_URL_MOBILE');
+$protocol = 'http://';
+if (Configuration::get('PS_SSL_ENABLED'))
+	$protocol = 'https://';
+$socolissimo_url = $protocol.Configuration::get('SOCOLISSIMO_URL_MOBILE');
 
 Context::getContext()->smarty->assign(array(
 	'inputs' => $inputs,
-	'socolissimo_url' => $socolissimo_url
+	'socolissimo_url' => $socolissimo_url,
+	'logo' => 'logo.gif',
+	'loader' => 'ajax-loader.gif'
 ));
 
 Context::getContext()->smarty->display(_PS_MODULE_DIR_.'socolissimo/views/templates/front/redirect.tpl');
