@@ -1,4 +1,5 @@
-{*
+<?php
+/**
 * 2007-2014 PrestaShop
 *
 * NOTICE OF LICENSE
@@ -21,24 +22,16 @@
 *  @copyright 2007-2014 PrestaShop SA
 *  @license   http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
 *  International Registered Trademark & Property of PrestaShop SA
-*}
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=iso-8859-1" />
-	</head>
-	<body onload="document.getElementById('socoForm').submit();">
-		<div style="width:320px;margin:0 auto;text-align:center;">
-			<form id="socoForm" name="form" action="{$socolissimo_url|escape:'htmlall':'UTF-8'}" method="POST">
+*/
 
-				{foreach from=$inputs key=key item=val}
-					<input type="hidden" name="{$key|escape:'htmlall':'UTF-8'}" value="{$val|escape:'htmlall':'UTF-8'}"/>
-				{/foreach}
-				<img src="{$logo|escape:'htmlall':'UTF-8'}" />
-				<p>{l s='You will be redirect to socolissimo in few moment. If it is not the case, please click button.' mod='socolissimo'}</p>
-				<p><img src="{$loader|escape:'htmlall':'UTF-8'}" /></p>
-				<input type="submit" value="Envoyer" />
-			</form>
-		</div>
-	</body>
-</html>
+if (!defined('_PS_VERSION_'))
+	exit;
+
+function upgrade_module_2_9_21($object, $install = false)
+{	
+	Configuration::updateValue('SOCOLISSIMO_URL', 'ws.colissimo.fr/pudo-fo-frame/storeCall.do');
+	Configuration::updateValue('SOCOLISSIMO_URL_MOBILE', 'ws-mobile.colissimo.fr/');
+	Configuration::updateValue('SOCOLISSIMO_SUP_URL', 'ws.colissimo.fr/supervision-pudo-frame/supervision.jsp');
+	Configuration::updateValue('SOCOLISSIMO_VERSION', '2.9.21');
+	return true;
+}
