@@ -23,6 +23,7 @@
 *  International Registered Trademark & Property of PrestaShop SA
 *}
 <script type="text/javascript">
+	var link_socolissimo = "{$link_socolissimo|escape:'UTF-8'}";
 	var soInputs = new Object();
 	var soBwdCompat = "{$SOBWD_C|escape:'htmlall'}";
 	var initialCost_label = "{$initialCost_label|escape:'htmlall'}"
@@ -65,23 +66,19 @@
 						$('#form').attr("action", baseDir + 'modules/socolissimo/redirect.php' + serialiseInput(soInputs));
 				} else {
 					if ($("input[name*='delivery_option[']:checked").val().replace(",", "") == soCarrierId)
-						if(rewriteActive)
-							$('#form').attr('action', baseDir + 'modules/socolissimo/redirect' + serialiseInput(soInputs));
-						else
-							$('#form').attr('action', baseDir + 'index.php' + serialiseInput(soInputs));
+							$('#form').attr('action', link_socolissimo + serialiseInput(soInputs));
 				}
 			});
 		});
 
 		function serialiseInput(inputs) {
-			var str = '?first_call=1&';
-			for (var cle in inputs) {
-				str += cle + '=' + inputs[cle] + '&';
-			}
-			if (!soBwdCompat)
-				return (str + 'gift=' + $('#gift').attr('checked') + '&gift_message=' + $('#gift_message').attr('value'));
+			if (soBwdCompat && !rewriteActive)
+				var str = '&first_call=1&';
 			else
-				return (str + 'module=socolissimo&controller=redirect&fc=module&gift=' + $('#gift').attr('checked') + '&gift_message=' + $('#gift_message').attr('value'));
+				var str = '?first_call=1&';
+			for (var cle in inputs) 
+				str += cle + '=' + inputs[cle] + '&';
+			return (str + 'gift=' + $('#gift').attr('checked') + '&gift_message=' + $('#gift_message').attr('value'));
 		}
 	{/literal}
 
